<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.AdminFragment"
    android:orientation="vertical"
    android:padding="4dp">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="4dp"
            android:padding="4dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="?attr/textAppearanceHeadline3"
                android:text="@string/hello_admin"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:id="@+id/helloAdmin" />

            <com.google.android.material.button.MaterialButton
                style="@style/textButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/extra_bold"
                android:text="@string/go_to_home_page"
                android:textColor="@color/primaryDarkColor"
                android:textSize="12sp"
                android:id="@+id/goToHome"
                android:gravity="end|center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:elevation="4dp"
            app:cardCornerRadius="4dp"
            android:padding="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_added_book"
                    android:textStyle="bold"
                    app:fontFamily="@font/extra"
                    android:layout_gravity="center"
                    android:fontFamily="?attr/textAppearanceHeadline3"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_id"
                        android:textStyle="bold"
                        app:fontFamily="@font/extra"
                        android:layout_marginStart="2dp"
                        android:fontFamily="?attr/textAppearanceBody2"
                        />
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Book Id"
                        android:id="@+id/bookIdTV"
                        android:textStyle="bold"
                        android:layout_marginStart="6dp"
                        android:fontFamily="?attr/textAppearanceBody2"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        app:fontFamily="@font/extra"
                        android:textStyle="bold"
                        android:layout_marginStart="2dp"
                        android:fontFamily="?attr/textAppearanceBody2"
                        />
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Book Title"
                        android:id="@+id/bootTitleTV"
                        android:textStyle="bold"
                        android:layout_marginStart="6dp"
                        android:fontFamily="?attr/textAppearanceBody2"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textStyle="bold"
                        app:fontFamily="@font/extra"
                        android:layout_marginStart="2dp"
                        android:fontFamily="?attr/textAppearanceBody2"
                        />
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/authorTV"
                        tools:text="Author"
                        android:textStyle="bold"
                        android:layout_marginStart="6dp"
                        android:fontFamily="?attr/textAppearanceBody2"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edition"
                        android:textStyle="bold"
                        app:fontFamily="@font/extra"
                        android:layout_marginStart="2dp"
                        android:fontFamily="?attr/textAppearanceBody2"
                        />
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Edition"
                        android:id="@+id/editionTV"
                        android:textStyle="bold"
                        android:layout_marginStart="6dp"
                        android:fontFamily="?attr/textAppearanceBody2"
                        />
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textButtonStyle"
                    android:text="@string/check_requested_books"
                    android:textColor="@color/primaryDarkColor"
                    android:fontFamily="@font/extra_bold"
                    android:id="@+id/checkRequestButton"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="5"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/book_id_"
                        android:id="@+id/bookIdET"
                        android:layout_weight="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_weight="5"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/pages"
                        android:id="@+id/pagesIdET"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/book_name"
                    android:id="@+id/bookNameET"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="4dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/author_name"
                    android:id="@+id/authorET"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_weight="5">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edition_"
                        android:id="@+id/editionET"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_weight="5">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/chapters"
                        android:id="@+id/chaptersET"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_weight="5">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/category"
                        android:id="@+id/categoryET"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/document_link"
                    android:id="@+id/docLinkET"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cover_image_link"
                    android:id="@+id/coverLinkET"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:id="@+id/descriptionET"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_book"
                android:id="@+id/addButton"
                app:cornerRadius="8dp"
                android:padding="8dp"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>