<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.UserRequest"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/girl"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="2dp"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:shapeAppearance="?attr/shapeAppearanceMediumComponent"

        android:elevation="12dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/give_us_the_details_of_the_book"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/font1"
                android:layout_gravity="center"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameETR"
                    android:textFontWeight="100"
                    android:hint="@string/name_of_the_book" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/authorETR"
                    android:textFontWeight="100"
                    android:hint="@string/author_name" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:id="@+id/submitButton"
                app:rippleColor="@color/primaryColor"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/textButtonStyle"
                android:text="@string/submit"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>